<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/edSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/animal_detail"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edSearch"
        app:layout_constraintStart_toStartOf="@+id/edSearch">

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/favourite"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_search"
        android:backgroundTint="#B334C759"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/guideLine"
        app:layout_constraintEnd_toEndOf="@+id/edSearch"
        app:layout_constraintStart_toStartOf="@+id/edSearch"
        app:layout_constraintTop_toBottomOf="@id/edSearch">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblName"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblSlogan"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblTopSpeed"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblLifeSpan"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblWeight"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblColor"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblSkinType"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/bg_search"
        android:backgroundTint="#B3B0A22B"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/ll"
        app:layout_constraintEnd_toEndOf="@+id/edSearch"
        app:layout_constraintStart_toStartOf="@+id/edSearch"
        app:layout_constraintTop_toTopOf="@id/guideLine">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblLocation"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblHabbit"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblDiet"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblLifeStyle"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblFavFood"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblMainPrey"
            style="@style/MyTestStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name : Lion"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />


</androidx.constraintlayout.widget.ConstraintLayout>